// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Apps Content should display home in the app items lists, if we are on mobile 1`] = `
<div
  className="coz-nav-pop-content"
>
  <ul
    className="coz-nav-group"
  >
    <AppItem
      app={
        Object {
          "slug": "cozy-home",
        }
      }
      useHomeIcon={true}
    />
  </ul>
</div>
`;

exports[`Apps Content should not display home if not on mobile and home is the currentApp 1`] = `
<div
  className="coz-nav-pop-content"
>
  <ul
    className="coz-nav-group"
  />
</div>
`;

exports[`Apps Content should not display home within the app items list, but just a link 1`] = `
<div
  className="coz-nav-pop-content"
>
  <ul
    className="coz-nav-group"
  />
  <a
    className="coz-apps-home-btn"
    role="menuitem"
  >
    <img
      src="test-file-stub"
    />
    Back to dashboard
  </a>
</div>
`;

exports[`Apps Content should render Loader when fetching 1`] = `
<div
  className="coz-nav-pop-content"
>
  <ul
    className="coz-nav-group"
  >
    <AppItemPlaceholder />
    <AppItemPlaceholder />
    <AppItemPlaceholder />
  </ul>
</div>
`;

exports[`Apps Content should render display Drive 1`] = `
<div
  className="coz-nav-pop-content"
>
  <ul
    className="coz-nav-group"
  >
    <AppItem
      app={
        Object {
          "name": "Drive",
          "slug": "cozy-drive",
        }
      }
    />
  </ul>
</div>
`;

exports[`Apps Content should render no App 1`] = `
<p
  className="coz-nav--error coz-nav-group"
>
  No applications found on the Cozy.
</p>
`;
